--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div class="cover">
             <img src="img/hans-eiskonen-8Pm_A-OHJGg-unsplash 1.png" alt="cover photo">
 
-            <h1>Acorda Devinho</h1>
-            <h2>Banda Rocketseat</h2>
+            <div class="text">
+                <h1>Acorda Devinho</h1>
+                <h2>Banda Rocketseat</h2>
+            </div>
         </div>
 
         <div class="controls">
@@ -25,7 +27,7 @@
         </div>
 
         <div class="bar">
-            <img src="img/bar.svg" alt="">
+            <img src="img/bar.svg" alt="music progress bar">
 
             <p>03:20<span class="right">00:12</span></p>
         </div>
