--- a/player2.html
+++ b/player2.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="bar">
-            <img src="img/bar.svg" alt="">
+            <img src="img/bar.svg" alt="music progress bar">
 
             <p>03:20<span class="right">00:12</span></p>
         </div>
